# geospatial_interfaces

./: CMakeLists.txt  package.xml
msg/: Band.msg  Cordinates.msg  Feature.msg  GeoJson.msg  GeoTiff.msg  Geometry.msg
proto/: Band.proto  Geojson.proto  Geotiff.proto  Header.proto  MapProtocol.proto  Pose.proto
